--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -13,7 +13,7 @@
 <meta name="theme-color" content="#ffffff"/>
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/> -->
 
-<!-- MY ICON with  -->
+<!-- MY ICON with  realfavicongenerator.net -->
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
