--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -14,11 +14,11 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/> -->
 
 <!-- MY ICON with  realfavicongenerator.net -->
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="{{ base_path }}/images/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="{{ base_path }}/images/favicon.svg" />
+<link rel="shortcut icon" href="{{ base_path }}/images/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/apple-touch-icon.png" />
+<link rel="manifest" href="{{ base_path }}/images/site.webmanifest" />
 
 <!-- Support for MatJax -->
 <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
