--- a/docs/_includes/author-profile.html
+++ b/docs/_includes/author-profile.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 <div itemscope itemtype="http://schema.org/Person">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <div class="author__avatar">
     {% if author.avatar contains "://" %}
     	<img src="{{ author.avatar }}" alt="{{ author.name }}">
